samples/_failures_safe/1761257049_bdaad4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d7c38aa.c: In function ‘main’:
./samples/SAFE/__tmp_5d7c38aa.c:154:16: error: missing terminating " character
  154 |         printf("Matrix multiplication
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5d7c38aa.c:154:9: error: expected expression at end of input
  154 |         printf("Matrix multiplication
      |         ^~~~~~
./samples/SAFE/__tmp_5d7c38aa.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d7c38aa.c:154:9: error: expected declaration or statement at end of input
